Added ptag with content.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <h1> mustang</h1>
 <h2> mustang</h2>
 <h3> mustang </h3>
-
-
+<p> mustangs always been the king of the streets. since 1964 ford,was number one in the musle car family. Two genrations later ford put together a monster. The 2016 GT350R!
+  </p> 
 
 </body>
 
